--- a/classroom/template/classroom/base.html
+++ b/classroom/template/classroom/base.html
@@ -15,12 +15,102 @@
 
         <title>Data Warehousing 1145200-63</title>
       </head>
+
+
 <body>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-    {% include 'includes/navbar.html' %}
-    {% block content %}
-    {% endblock %}
+    <section>
+        <div class="container-fluid">
+            <div class="row">
+                <aside class="col-2 ps-2 pe-2 pt-2 pb-2" style="border: 1px solid grey;">
+                    <div class="w-full h-screen flex mt-2">
+                        <ul class="navbar-nav text-secondary">
+                            <li class="nav-link">
+                                <a class="nav-item text-secondary" href="#">
+                                <i class="fas fa-home"></i>
+                                หน้าแรก
+                                </a>
+                            </li>
+                            <li class="nav-link">
+                                <a class="nav-item text-secondary" href="#">
+                                <i class="fas fa-calendar"></i>
+                                ปฏิธิน
+                                </a>
+                            </li>
+                            <li class="nav-link">
+                                <a class="nav-item text-secondary" href="">
+                                <i class="fas fa-graduation-cap"></i>
+                                ลงทะเบียนแล้ว
+                                </a>
+                            </li>
+                            <li class="nav-link">
+                                <a class="nav-item text-secondary" href="">
+                                <i class="fas fa-archive"></i>
+                                ชั้นเรียนที่เก็บแล้ว
+                                </a>
+                            </li>
+                            <li class="nav-link">
+                                <a class="nav-item text-secondary" href="">
+                                <i class="fas fa-cog"></i>
+                                การตั้งค่า
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="tab-content active-content">
+                        <div class="post">
+                            <!-- ... (เนื้อหาของโพสต์) ... -->
+                    
+                            <!-- ส่วนของกล่องรายละเอียดของโพสต์ -->
+                            <div class="post-details">
+                                <div class="post-detail-item">
+                                    <span class="post-detail-icon"><i class="fas fa-comment"></i></span>
+                                    5 ความคิดเห็น
+                                </div>
+                                <div class="post-detail-item">
+                                    <span class="post-detail-icon"><i class="fas fa-check-circle"></i></span>
+                                    10 ส่งแล้ว
+                                </div>
+                                <div class="post-detail-item">
+                                    <span class="post-detail-icon"><i class="fas fa-exclamation-circle"></i></span>
+                                    5 ยังไม่ได้ส่ง
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </aside>
+                <main class="col-10">
+                    {% include 'includes/navbar.html' %}
+                    {% block content %}
+                    <style>
+                        .tab-links a {
+                            display: inline-block;
+                            margin: 0 15px;
+                            padding: 10px 15px;
+                            background-color: #f7f7f7;
+                            border-radius: 5px 5px 0 0;
+                            color: #555;
+                            text-decoration: none;
+                            transition: all 0.3s;
+                        }
+                      
+                        .tab-links a:hover, .tab-links a.active {
+                            background-color: #e5e5e5;
+                            color: #222;
+                            border-bottom: 3px solid #4285F4;
+                        }
+                      
+                        .tab-content {
+                            padding: 20px;
+                            border: 1px solid #e5e5e5;
+                            background-color: #f7f7f7;
+                            border-top: none;
+                        }
+                      </style>
+                    {% endblock %}
+                </main>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
