--- a/classroom/template/classroom/base.html
+++ b/classroom/template/classroom/base.html
@@ -8,10 +8,30 @@
         <script src="https://unpkg.com/htmx.org@1.9.2"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="https://cdn.bokeh.org/bokeh/release/bokeh.min.js"></script>
+        
+        <!-- jQuery -->
+        <script src="{% static 'js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
+        <!-- Bootstrap4 files-->
+        <script src="{% static 'js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
+        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
 
         <link href="{% static 'fonts/fontawesome/css/all.min.css' %}" type="text/css" rel="stylesheet">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <!-- custom style -->
+        <link href="{% static 'css/aside.css' %}" rel="stylesheet" type="text/css"/>
+        <link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css"/>
+        <link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
+
+        <link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="{% static 'css/global.css' %}">
+        <link rel="stylesheet" href="{% static 'css/profile.css' %}">
+        <link rel="stylesheet" href="{% static 'css/text.css' %}">
+        <!-- custom javascript -->
+        <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="{% static 'js/jquery-3.3.1.min.js' %}" type="text/javascript"></script>
 
         <title>Data Warehousing 1145200-63</title>
       </head>
@@ -19,14 +39,15 @@
 
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    {% include 'includes/navbar.html' %}
     <section>
         <div class="container-fluid">
             <div class="row">
-                <aside class="col-2 ps-2 pe-2 pt-2 pb-2" style="border: 1px solid grey;">
+                <aside class="col-2 mt-2 aside-border" style="border: 1px solid grey;">
                     <div class="w-full h-screen flex mt-2">
                         <ul class="navbar-nav text-secondary">
                             <li class="nav-link">
-                                <a class="nav-item text-secondary" href="#">
+                                <a class="nav-item text-secondary" href="{% url 'home'%}">
                                 <i class="fas fa-home"></i>
                                 หน้าแรก
                                 </a>
@@ -55,32 +76,26 @@
                                 การตั้งค่า
                                 </a>
                             </li>
+                            {% if user.is_teacher %}
+                                <li class="nav-link">
+                                    <a class="nav-item text-secondary" href="{% url 'teacher' %}">
+                                    <i class="fas fa-cog"></i>
+                                    ข้อมูลของฉัน
+                                    </a>
+                                </li>
+                            {% elif user.is_student %}
+                                <li class="nav-link">
+                                    <a class="nav-item text-secondary" href="{% url 'student' %}">
+                                    <i class="fas fa-cog"></i>
+                                    ข้อมูลของฉัน
+                                    </a>
+                                </li>
+                            {% endif %}
+                            <a href="{% url 'logout' %}"> ออกจากระบบ</a>
                         </ul>
-                    </div>
-                    <div class="tab-content active-content">
-                        <div class="post">
-                            <!-- ... (เนื้อหาของโพสต์) ... -->
-                    
-                            <!-- ส่วนของกล่องรายละเอียดของโพสต์ -->
-                            <div class="post-details">
-                                <div class="post-detail-item">
-                                    <span class="post-detail-icon"><i class="fas fa-comment"></i></span>
-                                    5 ความคิดเห็น
-                                </div>
-                                <div class="post-detail-item">
-                                    <span class="post-detail-icon"><i class="fas fa-check-circle"></i></span>
-                                    10 ส่งแล้ว
-                                </div>
-                                <div class="post-detail-item">
-                                    <span class="post-detail-icon"><i class="fas fa-exclamation-circle"></i></span>
-                                    5 ยังไม่ได้ส่ง
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </aside>
                 <main class="col-10">
-                    {% include 'includes/navbar.html' %}
                     {% block content %}
                     <style>
                         .tab-links a {
