--- a/classroom/template/includes/navbar.html
+++ b/classroom/template/includes/navbar.html
@@ -1,32 +1,25 @@
 {% load static %}
 
-<!-- Using the latest Bootstrap version (v5.3) -->
 <div class="h-10 bg-gray-100 flex flex-row">
-    <a href="#" class="px-10 py-2">
-        <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
-            aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5">
-            </path>
-        </svg>
+    <!-- Logo and Classroom text -->
+    <a class="navbar-brand" href="{% url 'home' %}">
+        <img class="w-10 h-10" src="{% static 'images/logo.png' %}" alt="Classroom Logo">
+        <span class="underline p-3">Classroom</span>
     </a>
-    <span class="text-green-800">
-        <svg class="w-10 h-10" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18.75a60.07 60.07 0 0115.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 013 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 00-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 01-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 003 15h-.75M15 10.5a3 3 0 11-6 0 3 3 0 016 0zm3 0h.008v.008H18V10.5zm-12 0h.008v.008H6V10.5z"></path>
-          </svg>
-    </span>
-    <span class="underline p-3">Classroom</span>
-    <span class="p-3">
-        <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75"></path>
-          </svg>
-    </span>
-    <span class="p-3">
-        Data warehousing
-    </span>
-    <span class="flex-grow"></span>
-    <span class="p-3">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z"></path>
-          </svg>
-    </span>
+
+
+    <!-- User Authentication section -->
+    <div class="flex-grow">
+        <div class="d-flex">
+            <div class="mx-2">
+                <small class="title text-muted">คุณ {{request.user.first_name}}!</small><br>
+                {% if user.teacher %}
+                    <a href="{% url 'teacher' %}">แดชบอร์ด</a> | <a href="{% url 'logout' %}"> ออกจากระบบ</a>
+                {% elif user.student %}
+                    <a href="{% url 'student' %}">แดชบอร์ด</a> | <a href="{% url 'logout' %}"> ออกจากระบบ</a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+    
 </div>
