fix fucntion template and forms

--- a/classroom/template/classroom/submit_assignment.html
+++ b/classroom/template/classroom/submit_assignment.html
@@ -15,6 +15,11 @@
                         {% csrf_token %}
                         
                         <div class="mb-3">
+                            <label for="course" class="form-label">คอร์ส:</label>
+                            <input type="text" class="form-control" id="title" name="title" required>
+                        </div>
+                    
+                        <div class="mb-3">
                             <label for="title" class="form-label">ชื่อการบ้าน:</label>
                             <input type="text" class="form-control" id="title" name="title" required>
                         </div>
