--- a/classroom/template/classroom/submit_assignment.html
+++ b/classroom/template/classroom/submit_assignment.html
@@ -11,13 +11,15 @@
             </header>
             <div class="row mt-2">
                 <div class="col-12 bg-">
+                    {% include 'includes/alerts.html' %}
                     <form action="{% url 'submit_assignment' %}" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         
                         <div class="mb-3">
                             <label for="course" class="form-label">คอร์ส:</label>
-                            <input type="text" class="form-control" id="title" name="title" required>
+                            <input type="text" class="form-control" id="course" name="course" required>
                         </div>
+                        
                     
                         <div class="mb-3">
                             <label for="title" class="form-label">ชื่อการบ้าน:</label>
