--- a/classroom/template/classroom/add_assignment.html
+++ b/classroom/template/classroom/add_assignment.html
@@ -17,28 +17,33 @@
                         <div class="mb-3">
                             {{ form.title.label_tag }}
                             {{ form.title }}
+                            {{ form.title.errors }}
                         </div>
 
                         <div class="mb-3">
                             <p class="card-text">
                                 {{ form.description.label_tag }}
                                 {{ form.description }}
+                                {{ form.description.errors }}
                             </p>
                         </div>
 
                         <div class="mb-3">
                             {{ form.due_date.label_tag }}
                             {{ form.due_date }}
+                            {{ form.due_date.errors }}
                         </div>
 
                         <div class="mb-3">
                             {{ form.course.label_tag }}
                             {{ form.course }}
+                            {{ form.course.errors }}
                         </div>
 
                         <div class="mb-3">
                             {{ form.file.label_tag }}
                             {{ form.file }}
+                            {{ form.file.errors }}
                         </div>
 
                         <button type="submit" class="btn btn-primary btn-block">เพิ่มงาน</button>
