fix base home and views

--- a/classroom/template/classroom/base.html
+++ b/classroom/template/classroom/base.html
@@ -78,7 +78,7 @@
                             </li>
                             <li class="nav-link">
                                 <a class="nav-item text-secondary" href="{% url 'add_assignment' %}">
-                                <i class="fas fa-cog"></i>
+                                <i class="fas fa-book"></i>
                                 เพิ่มการบ้าน
                                 </a>
                             </li>
